[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
version = "0.8"

[dependencies.gobject-sys]
version = "0.8"

[dependencies.gstreamer-base-sys]
path = "../gstreamer-base-sys"
version = "0.7"

[dependencies.gstreamer-sys]
path = "../gstreamer-sys"
version = "0.7"

[dependencies.gstreamer-video-sys]
path = "../gstreamer-video-sys"
version = "0.7"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
dox = []
egl = []

[lib]
name = "gstreamer_gl_sys"

[package]
authors = ["Sebastian Dröge <sebastian@centricular.com>",
           "Víctor Manuel Jáquez Leal <vjaquez@igalia.com>"]
build = "build.rs"
description = "FFI bindings to libgstgl-1.0"
homepage = "https://gstreamer.freedesktop.org"
keywords = ["ffi", "gstreamer", "gnome", "multimedia"]
license = "MIT"
links = "gstgl-1.0"
name = "gstreamer-gl-sys"
readme = "README.md"
repository = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs-sys"
version = "0.7.0"
