[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
version = "0.9"

[dependencies.gobject-sys]
version = "0.9"

[dependencies.gstreamer-audio-sys]
path = "../gstreamer-audio-sys"
version = "0.8"

[dependencies.gstreamer-sys]
path = "../gstreamer-sys"
version = "0.8"

[dependencies.gstreamer-video-sys]
path = "../gstreamer-video-sys"
version = "0.8"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
v1_2 = []
v1_4 = ["v1_2"]
v1_6 = ["v1_4"]
v1_8 = ["v1_6"]
v1_10 = ["v1_8"]
v1_12 = ["v1_10"]
v1_14 = ["v1_12"]
v1_16 = ["v1_14"]
dox = []

[lib]
name = "gstreamer_pbutils_sys"

[package]
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
build = "build.rs"
description = "FFI bindings to libgstpbutils-1.0"
documentation = "https://slomo.pages.freedesktop.org/rustdocs/gstreamer-sys/gstreamer_pbutils_sys/"
homepage = "https://gstreamer.freedesktop.org"
keywords = ["ffi", "gstreamer", "gnome", "multimedia"]
license = "MIT"
links = "gstpbutils-1.0"
name = "gstreamer-pbutils-sys"
readme = "README.md"
repository = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs-sys"
version = "0.8.0"
