[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
libc = "0.2"
glib-sys = "0.4"
gobject-sys = "0.4"

[dependencies.gstreamer-sys]
path = "../gstreamer-sys"
version = "0.2"

[dependencies.gstreamer-video-sys]
path = "../gstreamer-video-sys"
version = "0.2"

[features]
v1_12 = []

[lib]
name = "gstreamer_player_sys"

[package]
build = "build.rs"
links = "gstplayer-1.0"
name = "gstreamer-player-sys"
version = "0.2.1"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
description = "FFI bindings to libgstplayer-1.0"
homepage = "https://gstreamer.freedesktop.org"
keywords = ["ffi", "gstreamer", "gnome", "multimedia"]
repository = "https://github.com/sdroege/gstreamer-sys"
license = "MIT"
readme = "README.md"

[badges]
travis-ci = { repository = "sdroege/gstreamer-sys", branch = "master" }
