[badges.gitlab]
branch = "master"
repository = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs-sys"

[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
libc = "0.2"

[dependencies.gio-sys]
version = "0.7"

[dependencies.glib-sys]
version = "0.7"

[dependencies.gobject-sys]
version = "0.7"

[dependencies.gstreamer-sdp-sys]
path = "../gstreamer-sdp-sys"
version = "0.6"

[dependencies.gstreamer-sys]
path = "../gstreamer-sys"
version = "0.6"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
dox = []
v1_2 = []
v1_2_1 = ["v1_2"]
v1_4 = ["v1_2_1"]
v1_6 = ["v1_4"]
v1_8 = ["v1_6"]
v1_10 = ["v1_8"]
v1_12 = ["v1_10"]
v1_14 = ["v1_12"]

[lib]
name = "gstreamer_rtsp_sys"

[package]
authors = ["Mathieu Duponchelle <mathieu@centricular.com>", "Sebastian Dröge <sebastian@centricular.com>"]
build = "build.rs"
description = "FFI bindings to libgstrtsp-1.0"
homepage = "https://gstreamer.freedesktop.org"
keywords = ["ffi", "gstreamer", "gnome", "multimedia"]
license = "MIT"
links = "gstrtsp-1.0"
name = "gstreamer-rtsp-sys"
readme = "README.md"
repository = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs-sys"
version = "0.6.1"
