[badges.gitlab]
branch = "master"
repository = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs-sys"

[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
version = "0.7"

[dependencies.gobject-sys]
version = "0.7"

[dependencies.gstreamer-sdp-sys]
path = "../gstreamer-sdp-sys"
version = "0.6"

[dependencies.gstreamer-sys]
path = "../gstreamer-sys"
version = "0.6"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
dox = []

[lib]
name = "gstreamer_webrtc_sys"

[package]
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
build = "build.rs"
description = "FFI bindings to libgstwebrtc-1.0"
homepage = "https://gstreamer.freedesktop.org"
keywords = ["ffi", "gstreamer", "gnome", "multimedia"]
license = "MIT"
links = "gstwebrtc-1.0"
name = "gstreamer-webrtc-sys"
readme = "README.md"
repository = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs-sys"
version = "0.6.0"
