[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
version = "0.9"

[dependencies.gobject-sys]
version = "0.9"

[dependencies.gstreamer-sdp-sys]
path = "../gstreamer-sdp-sys"
version = "0.8"
features = ["v1_14"]

[dependencies.gstreamer-sys]
path = "../gstreamer-sys"
version = "0.8"
features = ["v1_14"]

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
dox = []
v1_16 = ["gstreamer-sys/v1_16", "gstreamer-sdp-sys/v1_16"]

[lib]
name = "gstreamer_webrtc_sys"

[package]
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
build = "build.rs"
description = "FFI bindings to libgstwebrtc-1.0"
documentation = "https://slomo.pages.freedesktop.org/rustdocs/gstreamer-sys/gstreamer_webrtc_sys/"
homepage = "https://gstreamer.freedesktop.org"
keywords = ["ffi", "gstreamer", "gnome", "multimedia"]
license = "MIT"
links = "gstwebrtc-1.0"
name = "gstreamer-webrtc-sys"
readme = "README.md"
repository = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs-sys"
version = "0.8.0"

[package.metadata.docs.rs]
features = ["dox", "v1_16"]
